# Tools

./: .gitignore  .gitmodules  AutoClicker.c  MIT-LICENSE.txt  Proxy_List.txt  SortingAlgorithmsVisualizer.html  SortingAlgorithmsVisualizer.js  SortingAlgorithmsVisualizer.wasm  appium_test.py  auto_clicker.py  linux_tools.py  main.js  main.wasm  windows_tools.py
archived/rust_tools/google_course/rust_playground/: Cargo.toml
cpp_tools/OpenCVPlayground/: CMakeLists.txt  project_config.json
cpp_tools/OpenCVPlayground/include/: document_scanner.hpp  license_plate_detector.hpp  virtual_painter.hpp
cpp_tools/OpenCVPlayground/src/: document_scanner.cpp  license_plate_detector.cpp  main.cpp  virtual_painter.cpp
cpp_tools/SortingAlgorithmVisualizer/: CMakeLists.txt  Makefile  Makefile.txt  Makefile_old.txt  README.md  RayLibMakefile.txt  ReadMe.md  index.js  index.wasm  main  main.cpp  test  test.cpp
cpp_tools/SortingAlgorithmVisualizer/archive/: draw_state.txt
cpp_tools/SortingAlgorithmVisualizer/build_web/: CMakeCache.txt  Makefile  SortingAlgorithmsVisualizer.js  SortingAlgorithmsVisualizer.wasm  cmake_install.cmake
cpp_tools/SortingAlgorithmVisualizer/include/: binary_search.h  bubble_sort.h  configs.h  draw_state.h  insertion_sort.h  merge_sort.h  quick_sort.h  resource_manager.h  selection_sort.h  utils.h
cpp_tools/SortingAlgorithmVisualizer/output/: main  main.js  main.wasm
cpp_tools/SortingAlgorithmVisualizer/src/: binary_search.c  bubble_sort.c  draw_state.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  resource_manager.c  selection_sort.c  utils.c
cpp_tools/SortingAlgorithmVisualizer/tests/: test_runner
cpp_tools/SortingAlgorithmVisualizer/tests/src/: test_sample.c  unity.c
cpp_tools/SortingAlgorithmVisualizer/wasm/: main.js  main.wasm
cpp_tools/test_cpp/: CMakeLists.txt  Makefile
cpp_tools/test_cpp/include/bst/: BST.hpp  Node.hpp
cpp_tools/test_cpp/src/: main.cpp
cpp_tools/test_cpp/tests/: test_main.cpp
python_tools/amazon_scraper/: docker-compose.yaml  output.csv  prices.db  pyproject.toml
python_tools/amazon_scraper/files/: amazon_scraper.py  start.sh
python_tools/concurrent_job_scraper/: .mise.toml  app.py  instructions.txt  main.py  pyproject.toml
python_tools/concurrent_job_scraper/src/: app.py
python_tools/concurrent_job_scraper/utils/scrapers/: people_first_scraper.py  publix_job_scraper.py  ucf_job_scraper.py  universal_orlando_scraper.py
python_tools/concurrent_job_scraper/utils/templates/: job_scraper.py
python_tools/cppgen/: README.md  pyproject.toml
python_tools/cppgen/src/cppgen/: cli.py
python_tools/cppgen/src/cppgen/templates/: CMakeLists.txt.j2  test_main.cpp.j2
python_tools/get_youtube_transcript/: README.md  get_youtube_transcript.py  pyproject.toml
python_tools/get_youtube_transcript/yt_transcripts/: my_transcript_text_only_2025-03-21-18_51_14.txt  my_transcript_text_only_2025-03-21-19_27_27.txt  my_transcript_text_only_2025-05-18-14_52_10.txt  my_transcript_text_only_2025-11-24-23_51_49.txt  my_transcript_text_only_2025-11-24-23_54_35.txt  my_transcript_text_only_2025-12-08-23_21_38.txt  my_transcript_text_only_2025-12-12-23_14_49.txt  my_transcript_timestamped_2025-03-21-19_27_27.csv  my_transcript_timestamped_2025-11-24-23_51_49.csv  my_transcript_timestamped_2025-12-12-23_14_49.csv  transcript_2026-04-10-08_23_06.csv  transcript_2026-04-10-08_23_06.txt  transcript_2026-04-10-18_28_03.csv  transcript_2026-04-10-18_28_03.txt  transcript_2026-06-09-01_35_45.csv  transcript_2026-06-09-01_35_45.txt
python_tools/transactions_visualizer/: pyproject.toml  transaction_pyspark_notebook_code.txt  transactions_processor_pipeline.py  transactions_processor_pipeline_old.py  transactions_pyspark.ipynb
python_tools/transactions_visualizer/json_files/: chase_categories.json
rust_tools/cli_apps/password_manager_viewer/: Cargo.toml
rust_tools/cli_apps/password_manager_viewer/src/: main.rs
rust_tools/fetch_nasa_pic/: Cargo.toml
rust_tools/fetch_nasa_pic/src/: main.rs
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-15/: 2023_07_15.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-18/: 2023-07-18.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-20/: 2023-07-20.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-22/: 2023-07-22.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-23/: 2023-07-23.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-25/: 2023-07-25.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-07-29/: 2023-07-29.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-01/: 2023-08-01.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-06/: 2023-08-06.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-09/: 2023-08-09.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-18/: 2023-08-18.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-19/: 2023-08-19.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-20/: 2023-08-20.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-22/: 2023-08-22.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-23/: 2023-08-23.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-26/: 2023-08-26.txt
rust_tools/fetch_nasa_pic/src/nasa_pic_collection/2023-08-29/: 2023-08-29.txt
rust_tools/file_management/: Cargo.toml
rust_tools/file_management/src/: file_deduper_hashing.rs  file_deduper_hashing_parallel.rs  file_deduper_naive.rs  file_utils.rs  grep.rs  journal.rs  main.rs
rust_tools/file_management/test/c/: hi.c  hi.yo.c
rust_tools/general_tools/: Cargo.toml  log.txt
rust_tools/general_tools/autoclicker/: Cargo.toml
rust_tools/general_tools/autoclicker/src/: lib.rs
rust_tools/general_tools/donut/src/: lib.rs
rust_tools/general_tools/keylogger/: Cargo.toml
rust_tools/general_tools/keylogger/src/: lib.rs
rust_tools/general_tools/src/: main.rs
rust_tools/general_tools/uber_calculator/: Cargo.toml
rust_tools/general_tools/uber_calculator/src/: lib.rs
(+1437 files in other folders)
