[project]
name = "amazon-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "centuryhopper",email = "leotheasianlion@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "resend (>=2.29.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "amazon_scraper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
