[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "greenlet (==3.3.2)",
    "playwright (==1.58.0)",
    "pyee (==13.0.1)",
    "python-dotenv (==1.2.2)",
    "typing-extensions (==4.15.0)",
    "mypy (>=1.20.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
app = "src.app:main"