[project]
name = "cppgen"
version = "0.1.0"
description = ""
authors = [{ name = "Leo Zhang", email = "leotheasianlion@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer (>=0.25.1,<0.26.0)", "jinja2 (>=3.1.6,<4.0.0)"]

[tool.poetry]
packages = [{ include = "cppgen", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cppgen = "cppgen.cli:app"
