[project]
name = "get-youtube-transcript"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "get_youtube_transcript", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
