[project]
name = "get-youtube-transcript"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "playwright (>=1.58.0,<2.0.0)",
  "pandas (>=3.0.2,<4.0.0)",
  "asyncio (>=4.0.0,<5.0.0)",
  "mypy (>=1.20.0,<2.0.0)",
]
