[project]
name = "transactions-visualizer"
version = "0.1.0"
description = ""
authors = [
    {name = "centuryhopper",email = "leotheasianlion@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "transactions_visualizer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
