[package]
name = "fetch_nasa_pic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crate = "0.0.2"
reqwest = {version="0.11.18",features = ["json"]}
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
