[package]
name = "file_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"
clap = { version = "4.5.56", features = ["derive"] }
home = "0.5.11"
rayon = "1.11.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
