workspace = { members = [ "concurrency_primes", "keylogger","uber_calculator"] }
[package]
name = "general_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uber_calculator = { path = "./uber_calculator" }
concurrency_primes = { path = "./concurrency_primes" }
keylogger = { path = "./keylogger" }

