workspace = { members = [ "autoclicker", "donut","keylogger","uber_calculator"] }
[package]
name = "general_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uber_calculator = { path = "./uber_calculator" }
keylogger = { path = "./keylogger" }
autoclicker = { path = "./autoclicker"}
donut = { path = "./donut"}


