[package]
name = "password_manager_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
fakeit = "1.3.0"
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = {version = "0.12.12", features = ["json"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
unicode-width = "0.2.0"
