[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"] }
scraper = "0.17.1"
thiserror = "1.0.43"
tokio = "1.29.1"
whoami = "1.4.1"
